--- a/website/web/editor/src/angular/pixel_art_controller.html
+++ b/website/web/editor/src/angular/pixel_art_controller.html
@@ -28,7 +28,7 @@
 
     <!-- Tools -->
     <div ng-repeat="tool in canvas.tools" class="{{css_for_tool(tool)}}" ng-click="set_tool(tool)">
-      <img ng-src="/img/tool_{{tool.name}}.png"/>
+      <img ng-src="./img/tool_{{tool.name}}.png"/>
     </div>
 
   </div>
