--- a/website/web/editor/index.html
+++ b/website/web/editor/index.html
@@ -67,8 +67,8 @@
   <script src="./src/angular/pixel_art_controller.js"></script>
   <script src="./src/angular/library_controller.js"></script>
 
-  <link href="/css/editor.css" rel="stylesheet" media="screen">
-  <link href="/css/colorpicker.css" rel="stylesheet" media="screen">
+  <link href="./css/editor.css" rel="stylesheet" media="screen">
+  <link href="./css/colorpicker.css" rel="stylesheet" media="screen">
 
 </head>
 
