Unified around _id for an instance ID and definition_id when referring to an actor definition in a descriptor of ActorSprite. You can use the interface now!

--- a/website/web/editor/index.html
+++ b/website/web/editor/index.html
@@ -115,8 +115,8 @@
 
     <div id="sidebar-box" class="white-box" style="float:right; width:280px;" ng-cloak>
       <ul class="nav nav-tabs">
-        <li class="active"><a href="#rules" data-toggle="tab">Rules</a></li>
-        <li><a href="#variables" data-toggle="tab">Variables</a></li>
+        <li class="active"><a data-target="#rules" data-toggle="tab">Rules</a></li>
+        <li><a data-target="#variables" data-toggle="tab">Variables</a></li>
       </ul>
 
       <div class="tab-content">
