Some fixes for navigation within the editor

--- a/website/web/editor/index.html
+++ b/website/web/editor/index.html
@@ -76,7 +76,7 @@
 
   <div class="navbar" ng-controller="AppCtrl">
     <div class="navbar-inner">
-      <a class="brand" href="#">Codako</a>
+      <a class="brand" href="/">Codako</a>
       <ul class="nav">
         <li ng-repeat="item in navigation('left')" class="{{item.class}}"><a href="#/{{item.href}}">{{item.label}}</a></li>
       </ul>
