New technique for drawing selection based on an EaselJS filter, improved performance of art canvas with a tiny change

--- a/website/web/editor/index.html
+++ b/website/web/editor/index.html
@@ -39,6 +39,7 @@
   <script src="/src/underscore.js"></script>
 
   <script src="./src/easeljs-NEXT.min.js"></script>
+  <script src="./src/easeljs.SelectionFilter.js"></script>
   <script src="./src/bootstrap-colorpicker.js"></script>
   <script src="./src/extensions.js"></script>
 
