Preparing to work on the tutorial

--- a/web/stage-editor/index.html
+++ b/web/stage-editor/index.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-  <title>HTML5 Platformer Game</title>
+  <title>Codako</title>
   <link rel="shortcut icon" href="./icons/favicon.ico"/>
   <script>
       createjs = window;
