--- a/web/stage-editor/src/angular/controls_controller/recording.html
+++ b/web/stage-editor/src/angular/controls_controller/recording.html
@@ -57,6 +57,6 @@
 </div>
 
 <label>Act out what you want to happen in the picture on the right.</label>
-<button ng-click="save_recording()" class="btn btn-success right"><i class="icon-check"></i> Save Recording</button>
+<button id="button-save-recording" ng-click="save_recording()" class="btn btn-success right"><i class="icon-check"></i> Save Recording</button>
 <button ng-click="cancel_recording()" class="btn right"><i class="icon-remove"></i> Cancel</button>
 </div>
