--- a/web/stage-editor/src/angular/rules_controller.html
+++ b/web/stage-editor/src/angular/rules_controller.html
@@ -56,7 +56,7 @@
 </script>
 
 <div style="position:absolute;z-index:1000;top:-37px; left:200px;" class="btn-group" ng-show="definition_name()">
-  <a class="btn dropdown-toggle" data-toggle="dropdown">
+  <a id="buton-add-rule" class="btn dropdown-toggle" data-toggle="dropdown">
   	<i class="icon-tasks"></i> Add <span class="caret"></span>
   </a>
   <ul id="rules-dropdown" class="dropdown-menu">
@@ -64,7 +64,7 @@
   	<li class="divider"></li>
   	<li><a ng-click="add_rule_group_flow('key')"><span class="badge badge-info"></span> Add Flow Container</a></li>
   	<li class="divider"></li>
-  	<li><a ng-click="add_rule_group_event('key')"><span class="badge badge-success"></span> When a Key is Pressed...</a></li>
+  	<li id="menu-key-pressed"><a ng-click="add_rule_group_event('key')"><span class="badge badge-success"></span> When a Key is Pressed...</a></li>
   	<li><a ng-click="add_rule_group_event('click')"><span class="badge badge-success"></span> When I'm Clicked...</a></li>
   </ul>
 </div>
