--- a/web/stage-editor/index.html
+++ b/web/stage-editor/index.html
@@ -23,6 +23,7 @@
 
   <!-- Font CSS -->
   <link href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/3.2.1/css/font-awesome.min.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Varela+Round|Montserrat:400,700" rel="stylesheet" type="text/css">
 
   <!-- My CSS -->
   <link href="/css/main.css" rel="stylesheet" media="screen">
@@ -99,7 +100,7 @@
   </div>
 
 
-  <div class="container" style="width:1180px; margin:auto; margin-top:60px;" ng-controller="ControlsCtrl" ng-cloak>
+  <div class="editor container" ng-controller="ControlsCtrl" ng-cloak>
     <div id="tool-box" class="white-box" style="float:left;line-height:0;width:40px;">
       <div class="{{class_for_btn(tool() == 'pointer')}} btn-tool-first" ng-click="set_tool('pointer')"><img src="img/sidebar_pointer.png"></div>
 
