Update so that worlds have views

--- a/web/stage-viewer/index.html
+++ b/web/stage-viewer/index.html
@@ -3,6 +3,7 @@
 <head>
   <title>Codako</title>
   <link rel="shortcut icon" href="./icons/favicon.ico"/>
+  <meta property="og:site_name" content="Codako - Programming for Kids"/>
   <script>
       createjs = window;
   </script>
