Minor tweaks, giving cookie a custom name

--- a/web/stage-viewer/index.html
+++ b/web/stage-viewer/index.html
@@ -124,13 +124,14 @@
     <div class="row" style="margin-top:15px; margin-left:-10px;">
       <div class="span5 white-box" style="padding:15px;">
         {{world.description}}
-        <div style="margin-top:15px;">
+        <hr></hr>
+        <div style="margin-top:10px;">
           <a class="btn" style="float:right;" ng-click="cloneWorld()">Clone this world</a>
           See how this world was created and use it as a starting point for your own creation!
         </div>
       </div>
       <div class="span3 white-box" style="padding:15px;">
-        <h5 style="margin-top:0;">Create your own games!</h5>Codako is a programming environment designed for young learners ages 6-12. It's completely free, and no downloads, plugins, or typing skills are required. <a href="/">Learn More ></a>
+        <h5 style="margin-top:0;">Create your own games!</h5>Codako is a programming environment designed for young learners ages 6-12. It's completely free, and no downloads, plugins, or typing skills are required.<br><a href="/">Learn More ></a>
       </div>
     </div>
 
