Cleanup of save / reset controls

--- a/web/stage-editor/index.html
+++ b/web/stage-editor/index.html
@@ -121,8 +121,7 @@
       </div>
 
       <div class="controls"
-           ng-include="'./src/angular/controls_controller/'+control_set+'.html'"
-           style="text-align:center;">
+           ng-include="'./src/angular/controls_controller/'+control_set+'.html'">
       </div>
     </div>
 
