--- a/web/stage-viewer/index.html
+++ b/web/stage-viewer/index.html
@@ -131,7 +131,7 @@
         </div>
       </div>
       <div class="span3 white-box" style="padding:15px;">
-        <h5 style="margin-top:0;">Create your own games!</h5>Codako is a programming environment designed for young learners ages 6-12. It's completely free, and no downloads, plugins, or typing skills are required.<br><a href="/">Learn More ></a>
+        <h5 style="margin-top:0;">Create your own games!</h5>Codako is a programming environment designed for young learners ages 6-12. It's completely free, and no downloads, plugins, or typing skills are required.<div style="margin-top:10px;"><a href="/">Learn More ></a></div>
       </div>
     </div>
 
