Addition of download link for grabbing your sprite

--- a/web/stage-editor/src/angular/pixel_art_controller.html
+++ b/web/stage-editor/src/angular/pixel_art_controller.html
@@ -20,6 +20,8 @@
         <li><a ng-click="rotate(90)"><i class="icon-repeat"></i> Rotate Right</a></li>
         <li><a ng-click="flip('x')"><i class="icon-resize-horizontal"></i> Flip Horizontally</a></li>
         <li><a ng-click="flip('y')"><i class="icon-resize-vertical"></i> Flip Vertically</a></li>
+        <li class="divider"></li>
+        <li><a ng-mouseover="prepare_download_href($event)" download="image.jpg"><i class="icon-cloud-download"></i> Download Image</a></li>
       </ul>
     </div>
   </div>
